--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,23 @@
-<p id="notice"><%= notice %></p>
+<h1><%= @post.title %></h1>
+
+<%= @post.text %>
+
+<h2>Commentaire</h2>
+
+<% @post.comments.each do |comment| %>
+  <p><%= comment.text %></p>
+  <p>Il y a <%= time_ago_in_words comment.created_at %></p>
+<% end %>
+
+<%= form_for [@post, @post.comments.build] do |f| %>
+  <p><%= f.text_area :text, :size => "40x10" %></p>
+  <p><%= f.submit "Poster un commentaire" %></p>
+<% end %>
 
 <p>
-  <strong>Title:</strong>
-  <%= @post.title %>
+  <%= link_to "Précédent", posts_path %>
+  |
+  <%= link_to "Editer", edit_post_path(@post) %>
+  |
+  <%= link_to "Supprimer", @post, :method => :delete, :confirm => "Etes-vous sure ?" %>
 </p>
-
-<p>
-  <strong>Text:</strong>
-  <%= @post.text %>
-</p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
