--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,6 +7,7 @@
 <% @post.comments.each do |comment| %>
   <p><%= comment.text %></p>
   <p>Il y a <%= time_ago_in_words comment.created_at %></p>
+  <p><%= link_to "Supprimer commentaire", [@post, comment], :method => :delete, :confirm => "Etes-vous sure ?" %></p>
 <% end %>
 
 <%= form_for [@post, @post.comments.build] do |f| %>
