--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,6 +9,7 @@
 <a href="/users/sign_in">Se connecter</a>
 <% end %>
 <% @posts.each do |post| %>
+<% if post.disable == false %>
   <h2><%= link_to post.title, post %></h2>
   <% if post.user_id == 0 %>
   <p>Anonyme</p>
@@ -21,6 +22,7 @@
   <p>
     <%= truncate post.text %>
   </p>
+  <% end %>
 <% end %>
 
 <p>
